# cloudzipfile

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cloudzipfile/: __init__.py  cloudzipfile.py
src/cloudzipfile/cloudclients/: cloudclients.py
tests/: test_azure.py
